# ai_learning_guide

./: README.md  pyproject.toml
src/ai_learning_guide/: main.py
src/ai_learning_guide/crews/research_crew/: research_crew.py
src/ai_learning_guide/crews/research_crew/config/: agents.yaml  llm.yaml  tasks.yaml
src/ai_learning_guide/crews/writing_crew/: writing_crew.py
src/ai_learning_guide/crews/writing_crew/config/: agents.yaml  llm.yaml  tasks.yaml
