[project]
name = "ai_learning_guide"
version = "0.1.0"
description = "ai_learning_guide using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
    "ddgs>=9.11.4",
]

[project.scripts]
kickoff = "ai_learning_guide.main:kickoff"
run_crew = "ai_learning_guide.main:kickoff"
plot = "ai_learning_guide.main:plot"
run_with_trigger = "ai_learning_guide.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
